--- a/orchestrator.yaml
+++ b/orchestrator.yaml
@@ -43,6 +43,7 @@ function:
           :INTERACTOR_FILE_LIST -> "/api/file/list"
           :INTERACTOR_PROJECT_EXPORT -> "/api/config/get"
           :INTERACTOR_EVENT_HISTORY -> "/api/event/history"
+          :INTERACTOR_EVENT_LAST_ID -> "/api/event/history_last_id"
           _ -> "NO URL"
         end
   get_response_struct:
@@ -512,10 +513,8 @@ instance:
                 {ip, port, password} = function("return_entity_connection_info", {category, group, entity})
                 url = "http://" <> ip <> ":" <> port <> path
                 
-                Log.info(url)
                 # REQUEST TO API SERVER
                 result = function("http_request", %{"url": url, "body": %{"password" => password, "index" => index, "length" => length}})
-                Log.info(result)
                 
                 # RESPONSE
                 response_data = function("get_response_struct")
@@ -527,6 +526,31 @@ instance:
                 function("respond", response)
             model:
               $ref: "/api/interactor/event/history POST"
+          - do:
+              $action: "elixir"
+              value: |
+                category = "interactor"
+                group = v["parameters"]["group"]
+                entity = v["parameters"]["entity"]
+                
+                path = function("get_api_server_path", :INTERACTOR_EVENT_LAST_ID)
+                {ip, port, password} = function("return_entity_connection_info", {category, group, entity})
+                url = "http://" <> ip <> ":" <> port <> path
+                
+                # REQUEST TO API SERVER
+                result = function("http_request", %{"url": url, "body": %{"password" => password}})
+                [[id]] = result["data"] |> Enum.at(1) |> Map.get("rows")
+                
+                # RESPONSE
+                response_data = function("get_response_struct")
+                response = if result["result"] === "success" do
+                 %{ response_data | "method" => v["method"], "res_body" => id}
+                else
+                  %{ response_data | "is_success" => false}
+                end
+                function("respond", response)
+            model:
+              $ref: "/api/interactor/event/last-id GET"
         none:
           $action: "http response"
           body:
@@ -662,6 +686,16 @@ model:
       path:
         const: "/api/interactor/event/history"
         type: "string"
+    type: "object"
+  /api/interactor/event/last-id GET:
+    $parser: "json"
+    properties:
+      method:
+        const: "GET"
+        type: "string"
+      path:
+        $parser: "path"
+        pattern: "/api/interactor/event/last-id"
     type: "object"
   /api/interactor/files GET:
     $parser: "json"
