--- a/orchestrator.yaml
+++ b/orchestrator.yaml
@@ -659,6 +659,28 @@ instance:
                 # Logic to be added
             model:
               $ref: "/api/{application}/update/{file-category}/execute POST"
+          - do:
+              $action: "elixir"
+              value: |
+                group = v["parameters"]["group"]
+                entity = v["parameters"]["entity"]
+                
+                Log.info("Logic to be added - " <> group <> ", " <> entity)
+                
+                # Logic to be added
+            model:
+              $ref: "/api/insight/alarm/history GET"
+          - do:
+              $action: "elixir"
+              value: |
+                group = v["parameters"]["group"]
+                entity = v["parameters"]["entity"]
+                
+                Log.info("Logic to be added - " <> group <> ", " <> entity)
+                
+                # Logic to be added
+            model:
+              $ref: "/api/insight/alarm/current GET"
         none:
           $action: "http response"
           body:
@@ -783,6 +805,26 @@ model:
         type: "string"
       path:
         const: "/api/groups"
+        type: "string"
+    type: "object"
+  /api/insight/alarm/current GET:
+    $parser: "json"
+    properties:
+      method:
+        const: "GET"
+        type: "string"
+      path:
+        const: "/api/insight/alarm/current"
+        type: "string"
+    type: "object"
+  /api/insight/alarm/history GET:
+    $parser: "json"
+    properties:
+      method:
+        const: "GET"
+        type: "string"
+      path:
+        const: "/api/insight/alarm/history"
         type: "string"
     type: "object"
   /api/interactor/event/history POST:
